
HOW TO UPDATE?

- pip or pip3 install dearpygui --upgrade
- Read the `Breaking Changes` section (here in the changelog).
- Please report any issue!

-----------------------------------------------------------------------
 VERSION 0.1.0 Beta 14
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.0-beta14


-----------------------------------------------------------------------
 VERSION 0.1.0 Beta 13
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.0-beta13

Fixes:

- Images: Fixed memory leaks for image textures #122
- Other:  Fixed stop_dearpygui command #102
- Labels:  Fixed issue with set_label the same #120

New Commands:

- Widgets: add "does_item_exist" command #119
- Widgets: add "get_item_children" command #123
- Widgets: add "get_all_items" command #123
- Widgets: add "get_windows" command #123


-----------------------------------------------------------------------
 VERSION 0.1.0 Beta 12
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.0-beta12

Fixes:

- Key/Mouse Callbacks: fixed issue where key/mouse callbacks were
	sending there ID as the sender (and as a string). They know
	send the active window as the sender and approriate information
	through data. #108

New Commands:

- Inputs:   input/slider/drag now have an "on_enter" keyword to only
	run their callbacks on enter key presses
- App:      new command "stop_dearpygui" #102
- Widgets:  new command "set_item_label" #99
- Widgets:  new command "get_item_label" #99

-----------------------------------------------------------------------
 VERSION 0.1.0 Beta 11
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.0-beta11
