@@ -28,6 +28,11 @@ HOW TO UPDATE?
 
 Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.0-beta14
 
+Fixes:
+
+- Data Source: Fixed seg faults related to data source #127
+- Debug Window: Fixed debug item names #107
+
 
 -----------------------------------------------------------------------
  VERSION 0.1.0 Beta 13
